fix post overflow

--- a/src/app.css
+++ b/src/app.css
@@ -1,6 +1,21 @@
 @import '@fontsource/manrope';
 @import '@fontsource/jetbrains-mono';
 
+/* WebKit (Chrome, Safari) */
+::-webkit-scrollbar {
+	width: 8px;
+	height: 8px; /* Height for horizontal scrollbar */
+}
+
+::-webkit-scrollbar-thumb {
+	background-color: #c0c0c0;
+	border-radius: 6px;
+}
+
+::-webkit-scrollbar-track {
+	background-color: #f1f1f1;
+}
+
 html {
 	/* font */
 	--font-sans: 'Manrope', sans-serif;
@@ -157,5 +172,6 @@ li {
 	padding: var(--size-3);
 	border-radius: 8px;
 	tab-size: 2;
+	/*max-width: 90%;*/
 	overflow-x: auto;
 }
